--- a/vaadin-grid-column.html
+++ b/vaadin-grid-column.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="vaadin-grid-templatizer-behavior.html">
 
 <dom-module id="vaadin-grid-column">
 </dom-module>
@@ -116,6 +117,13 @@
       },
 
       _templateChanged: function(template) {
+        this._templateInstances = [];
+        this._forwardedParentProps = {};
+        this.templatize(template);
+
+        // TODO: hack to avoid: https://github.com/Polymer/polymer/issues/3307
+        this._parentProps = this._parentProps || {};
+
         // We bubble false for optimisation
         this.fire('property-changed', {path: 'template', value: template}, {bubbles: false});
       },
@@ -133,7 +141,8 @@
      */
     vaadin.elements.grid.vaadinGridColumnBehavior = [
       vaadinGridColumnBaseBehavior,
-      vaadinGridColumnBehaviorImpl
+      vaadinGridColumnBehaviorImpl,
+      vaadin.elements.grid.TemplatizerBehavior
     ];
 
     Polymer({
