--- a/vaadin-grid-table-cell.html
+++ b/vaadin-grid-table-cell.html
@@ -1,4 +1,5 @@
 <link rel="import" href="vaadin-grid-cell-click-behavior.html">
+<link rel="import" href="vaadin-grid-templatizer-behavior.html">
 
 <dom-module id="vaadin-grid-table-cell"></dom-module>
 <dom-module id="vaadin-grid-table-header-cell"></dom-module>
@@ -36,7 +37,6 @@
         target: Object,
         width: String,
 
-        _forwardedParentProps: Object,
         _childColumns: Array,
 
         _cellContent: Object,
@@ -49,22 +49,13 @@
         '_flexChanged(flex)',
         '_indexChanged(index, instance)',
         '_itemChanged(item, instance)',
-        '_forwardedParentPropsChanged(_forwardedParentProps.*, instance)',
+        '_instanceChanged(instance, target)',
         '_selectedChanged(selected, instance)',
         '_toggleContent(isAttached, _cellContent, _insertionPoint)',
         '_widthChanged(width)',
         '_visibleChildColumnsChanged(_visibleChildColumns)',
         '_childColumnsChanged(_childColumns)'
       ],
-
-      created: function() {
-        this._instanceProps = {
-          expanded: true,
-          index: true,
-          item: true,
-          selected: true
-        };
-      },
 
       _columnChanged: function(column) {
         this.flex = column.flex;
@@ -102,7 +93,8 @@
       },
 
       _expandedChanged: function(expanded, instance) {
-        instance.notifyPath('expanded', expanded);
+        instance.__expanded__ = expanded;
+        instance.expanded = expanded;
       },
 
       _flexChanged: function(flex) {
@@ -110,17 +102,16 @@
       },
 
       _indexChanged: function(index, instance) {
-        instance.notifyPath('index', index);
+        instance.index = index;
       },
 
       _itemChanged: function(item, instance) {
-        // use assignment here instead of notifyPath to avoid triggering
-        // forwardInstancePath for path "item" on cells unnecessarily.
         instance.item = item;
       },
 
       _selectedChanged: function(selected, instance) {
-        instance.notifyPath('selected', selected);
+        instance.__selected__ = selected;
+        instance.selected = selected;
       },
 
       _childColumnsChanged: function(childColumns) {
@@ -146,34 +137,14 @@
         this.style.flexBasis = width;
       },
 
-      _templateChanged: function(template, target) {
-        this.templatize(template);
+      _templateChanged: function(template) {
+        var parent = template.parentElement || Polymer.dom(template).parentNode;
 
-        // fix _rootDataHost to the context where template has been defined
-        if (template._rootDataHost) {
-          this._getRootDataHost = function() {
-            return template._rootDataHost;
-          };
-        }
+        this.instance = parent.stamp(null);
+        parent.push('_templateInstances', this.instance);
+      },
 
-        // TODO: hack to avoid: https://github.com/Polymer/polymer/issues/3307
-        this._parentProps = this._parentProps || {};
-
-        this.instance = this.stamp(null);
-        template.instances = template.instances || [];
-        this._templateInstances = template.instances;
-        template.instances.push(this.instance);
-
-        // use the same forwardedParentProps instance for all cells using the same template.
-        template.forwardedParentProps = template.forwardedParentProps || {};
-        this._forwardedParentProps = template.forwardedParentProps;
-
-        // initializing new template instance with previously forwarded parent props.
-        // could be done with observers, but this is simpler.
-        for (var key in this._forwardedParentProps) {
-          this.instance[key] = this._forwardedParentProps[key];
-        }
-
+      _instanceChanged: function(instance, target) {
         this.style.height = '';
 
         this._cellContent = document.createElement('div');
@@ -185,65 +156,6 @@
         this._insertionPoint = document.createElement('content');
         this._insertionPoint.setAttribute('select', '[data-cell-content-id="' + target._contentIndex + '"]');
       },
-
-      _forwardInstanceProp: function(inst, prop, value) {
-        // fire notification event only when a prop is changed through a user-action.
-        // e.g. 'expanded' is different from the originally bound '__expanded__' value.
-        if (this.parentElement &&
-          this.parentElement['__' + prop + '__'] !== undefined &&
-          this.parentElement['__' + prop + '__'] !== value) {
-
-          this.fire('template-instance-changed', {
-            prop: prop,
-            value: value,
-            inst: inst
-          });
-        }
-      },
-
-      _forwardInstancePath: function(inst, path, value) {
-        // TODO: assuming we're currently just listening to [[item.xxxx]] properties
-        // which affect only cells on the current row.
-        if (path.indexOf('item.') === 0) {
-          this.parentElement.iterateCells(function(cell) {
-            if (cell.instance) {
-              cell.instance.notifyPath(path, value);
-            }
-          });
-
-          // instance.notifyPath above will call _forwardInstancePath recursively,
-          // so need to debounce to avoid firing the same event multiple times.
-          this.parentElement.debounce('item-changed', function() {
-            // stripping 'item.' from path.
-            this.parentElement.fire('item-changed', {
-              item: inst.item,
-              path: path.substring(5),
-              value: value
-            });
-          }.bind(this));
-        }
-      },
-
-      _forwardParentProp: function(prop, value) {
-        // _forwardParentProp might be called during this.stamp() before
-        // this.instance is set. We need to delay it until instance is set.
-        this.set('_forwardedParentProps.' + prop, value);
-      },
-
-      _forwardParentPath: function(path, value) {
-        this.set('_forwardedParentProps.' + path, value);
-      },
-
-      _forwardedParentPropsChanged: function(parentProps) {
-        if (parentProps.path !== '_forwardedParentProps') {
-          var prop = parentProps.path.substring(parentProps.path.indexOf('.') + 1);
-          var value = parentProps.value;
-
-          this._templateInstances.forEach(function(inst) {
-            inst.notifyPath(prop, value);
-          });
-        }
-      }
     };
 
     Polymer({
@@ -252,20 +164,17 @@
       extends: 'td',
 
       behaviors: [
-        Polymer.Templatizer,
         vaadinGridTableCellBehavior,
         vaadin.elements.grid.CellClickBehavior
       ],
 
-      observers: ['_templateChanged(template, target)'],
+      observers: ['_templateChanged(template)'],
 
       _cellClick: function() {
         this.fire('cell-click', {
           model: this.instance
         });
-
       }
-
     });
 
     Polymer({
@@ -278,20 +187,37 @@
       },
 
       behaviors: [
-        Polymer.Templatizer,
+        vaadin.elements.grid.TemplatizerBehavior,
         vaadinGridTableCellBehavior
       ],
 
       observers: ['_headerTemplateChanged(headerTemplate, target)'],
 
       _headerTemplateChanged: function(headerTemplate, target) {
+        this._instanceProps = {};
+
         if (headerTemplate !== null && (this._isColumnRow || this.column.localName === 'vaadin-grid-column-group')) {
           this._isEmpty = false;
-          this._templateChanged(headerTemplate, target);
+          this.templatize(headerTemplate);
+
+          // fix _rootDataHost to the context where template has been defined
+          if (headerTemplate._rootDataHost) {
+            this._getRootDataHost = function() {
+              return headerTemplate._rootDataHost;
+            };
+          }
+
+          // TODO: hack to avoid: https://github.com/Polymer/polymer/issues/3307
+          this._parentProps = this._parentProps || {};
         } else {
           this._isEmpty = true;
-          this._templateChanged(document.createElement('template'), target);
+          this.templatize(document.createElement('template'));
         }
+
+        this._forwardedParentProps = {};
+        this.instance = this.stamp(null);
+        this._templateInstances = [this.instance];
+
         this.fire('cell-empty-changed');
       }
     });
@@ -306,20 +232,37 @@
       },
 
       behaviors: [
-        Polymer.Templatizer,
+        vaadin.elements.grid.TemplatizerBehavior,
         vaadinGridTableCellBehavior
       ],
 
       observers: ['_footerTemplateChanged(footerTemplate, target)'],
 
       _footerTemplateChanged: function(footerTemplate, target) {
+        this._instanceProps = {};
+
         if (footerTemplate !== null && (this._isColumnRow || this.column.localName === 'vaadin-grid-column-group')) {
-          this._templateChanged(footerTemplate, target);
           this._isEmpty = false;
+          this.templatize(footerTemplate);
+
+          // fix _rootDataHost to the context where template has been defined
+          if (footerTemplate._rootDataHost) {
+            this._getRootDataHost = function() {
+              return footerTemplate._rootDataHost;
+            };
+          }
+
+          // TODO: hack to avoid: https://github.com/Polymer/polymer/issues/3307
+          this._parentProps = this._parentProps || {};
         } else {
-          this._templateChanged(document.createElement('template'), target);
           this._isEmpty = true;
+          this.templatize(document.createElement('template'));
         }
+
+        this._forwardedParentProps = {};
+        this.instance = this.stamp(null);
+        this._templateInstances = [this.instance];
+
         this.fire('cell-empty-changed');
       }
     });
