--- a/demo/selection.html
+++ b/demo/selection.html
@@ -73,7 +73,7 @@
             </vaadin-grid-column>
             <vaadin-grid-column>
               <template>
-                <paper-button raised focused="{{selected}}">Select</paper-button>
+                <paper-checkbox checked="{{selected}}">Select</paper-checkbox>
               </template>
             </vaadin-grid-column>
           </vaadin-grid>
