--- a/vaadin-grid-table-cell.html
+++ b/vaadin-grid-table-cell.html
@@ -49,22 +49,13 @@
         '_flexChanged(flex)',
         '_indexChanged(index, instance)',
         '_itemChanged(item, instance)',
-        '_forwardedParentPropsChanged(_forwardedParentProps.*, instance)',
+        '_instanceChanged(instance, target)',
         '_selectedChanged(selected, instance)',
         '_toggleContent(isAttached, _cellContent, _insertionPoint)',
         '_widthChanged(width)',
         '_visibleChildColumnsChanged(_visibleChildColumns)',
         '_childColumnsChanged(_childColumns)'
       ],
-
-      created: function() {
-        this._instanceProps = {
-          expanded: true,
-          index: true,
-          item: true,
-          selected: true
-        };
-      },
 
       _columnChanged: function(column) {
         this.flex = column.flex;
@@ -102,7 +93,8 @@
       },
 
       _expandedChanged: function(expanded, instance) {
-        instance.notifyPath('expanded', expanded);
+        instance.__expanded__ = expanded;
+        instance.expanded = expanded;
       },
 
       _flexChanged: function(flex) {
@@ -110,17 +102,16 @@
       },
 
       _indexChanged: function(index, instance) {
-        instance.notifyPath('index', index);
+        instance.index = index;
       },
 
       _itemChanged: function(item, instance) {
-        // use assignment here instead of notifyPath to avoid triggering
-        // forwardInstancePath for path "item" on cells unnecessarily.
         instance.item = item;
       },
 
       _selectedChanged: function(selected, instance) {
-        instance.notifyPath('selected', selected);
+        instance.__selected__ = selected;
+        instance.selected = selected;
       },
 
       _childColumnsChanged: function(childColumns) {
@@ -146,34 +137,31 @@
         this.style.flexBasis = width;
       },
 
-      _templateChanged: function(template, target) {
-        this.templatize(template);
+      _templateChanged: function(template, column) {
+        // this.templatize(template);
+        //
+        // // fix _rootDataHost to the context where template has been defined
+        // if (template._rootDataHost) {
+        //   this._getRootDataHost = function() {
+        //     return template._rootDataHost;
+        //   };
+        // }
+        //
+        // // TODO: hack to avoid: https://github.com/Polymer/polymer/issues/3307
+        // this._parentProps = this._parentProps || {};
 
-        // fix _rootDataHost to the context where template has been defined
-        if (template._rootDataHost) {
-          this._getRootDataHost = function() {
-            return template._rootDataHost;
-          };
-        }
-
-        // TODO: hack to avoid: https://github.com/Polymer/polymer/issues/3307
-        this._parentProps = this._parentProps || {};
-
-        this.instance = this.stamp(null);
-        template.instances = template.instances || [];
-        this._templateInstances = template.instances;
-        template.instances.push(this.instance);
+        this.instance = column.stamp(null);
+        column.push('_templateInstances', this.instance);
+        // template.instances = template.instances || [];
+        // this._templateInstances = template.instances;
+        // template.instances.push(this.instance);
 
         // use the same forwardedParentProps instance for all cells using the same template.
         template.forwardedParentProps = template.forwardedParentProps || {};
         this._forwardedParentProps = template.forwardedParentProps;
+      },
 
-        // initializing new template instance with previously forwarded parent props.
-        // could be done with observers, but this is simpler.
-        for (var key in this._forwardedParentProps) {
-          this.instance[key] = this._forwardedParentProps[key];
-        }
-
+      _instanceChanged: function(instance, target) {
         this.style.height = '';
 
         this._cellContent = document.createElement('div');
@@ -234,10 +222,16 @@
         this.set('_forwardedParentProps.' + path, value);
       },
 
-      _forwardedParentPropsChanged: function(parentProps) {
-        if (parentProps.path !== '_forwardedParentProps') {
-          var prop = parentProps.path.substring(parentProps.path.indexOf('.') + 1);
-          var value = parentProps.value;
+      _forwardedParentPropsChanged: function(e, instance) {
+        if (e.path === '_forwardedParentProps') {
+          // initializing new template instance with previously forwarded parent props.
+          // could be done with observers, but this is simpler.
+          for (var key in e.value) {
+            instance[key] = e.value[key];
+          }
+        } else if (e.path !== '_forwardedParentProps') {
+          var prop = e.path.substring(e.path.indexOf('.') + 1);
+          var value = e.value;
 
           this._templateInstances.forEach(function(inst) {
             inst.notifyPath(prop, value);
@@ -252,20 +246,21 @@
       extends: 'td',
 
       behaviors: [
-        Polymer.Templatizer,
         vaadinGridTableCellBehavior,
         vaadin.elements.grid.CellClickBehavior
       ],
 
-      observers: ['_templateChanged(template, target)'],
+      properties: {
+        _forwardedParentProps: Object
+      },
+
+      observers: ['_templateChanged(template, column)'],
 
       _cellClick: function() {
         this.fire('cell-click', {
           model: this.instance
         });
-
       }
-
     });
 
     Polymer({
@@ -282,17 +277,63 @@
         vaadinGridTableCellBehavior
       ],
 
-      observers: ['_headerTemplateChanged(headerTemplate, target)'],
+      observers: ['_headerTemplateChanged(headerTemplate, target)', '_forwardedParentPropsChanged(_forwardedParentProps.*, instance)'],
 
       _headerTemplateChanged: function(headerTemplate, target) {
+
         if (headerTemplate !== null && (this._isColumnRow || this.column.localName === 'vaadin-grid-column-group')) {
           this._isEmpty = false;
-          this._templateChanged(headerTemplate, target);
+          this.templatize(headerTemplate);
+          // this._templateChanged(headerTemplate, target);
+          // fix _rootDataHost to the context where template has been defined
+          if (headerTemplate._rootDataHost) {
+            this._getRootDataHost = function() {
+              return headerTemplate._rootDataHost;
+            };
+          }
+
+          // TODO: hack to avoid: https://github.com/Polymer/polymer/issues/3307
+          this._parentProps = this._parentProps || {};
         } else {
           this._isEmpty = true;
-          this._templateChanged(document.createElement('template'), target);
+          this.templatize(document.createElement('template'));
+          // this._templateChanged(document.createElement('template'), target);
         }
+
+        this._forwardedParentProps = {};
+        this.instance = this.stamp(null);
+        this._templateInstances = [this.instance];
+
         this.fire('cell-empty-changed');
+      },
+
+      _forwardParentProp: function(prop, value) {
+        // _forwardParentProp might be called during this.stamp() before
+        // this.instance is set. We need to delay it until instance is set.
+        this.set('_forwardedParentProps.' + prop, value);
+        // this.instance.notifyPath(prop, value);
+      },
+
+      _forwardParentPath: function(path, value) {
+        this.set('_forwardedParentProps.' + path, value);
+        // this.instance.notifyPath(path, value);
+      },
+
+      _forwardedParentPropsChanged: function(e, instance) {
+        if (e.path === '_forwardedParentProps') {
+          // initializing new template instance with previously forwarded parent props.
+          // could be done with observers, but this is simpler.
+          for (var key in e.value) {
+            instance[key] = e.value[key];
+          }
+        } else if (e.path !== '_forwardedParentProps') {
+          var prop = e.path.substring(e.path.indexOf('.') + 1);
+          var value = e.value;
+
+          this._templateInstances.forEach(function(inst) {
+            inst.notifyPath(prop, value);
+          });
+        }
       }
     });
 
@@ -314,10 +355,10 @@
 
       _footerTemplateChanged: function(footerTemplate, target) {
         if (footerTemplate !== null && (this._isColumnRow || this.column.localName === 'vaadin-grid-column-group')) {
-          this._templateChanged(footerTemplate, target);
+          // this._templateChanged(footerTemplate, target);
           this._isEmpty = false;
         } else {
-          this._templateChanged(document.createElement('template'), target);
+          // this._templateChanged(document.createElement('template'), target);
           this._isEmpty = true;
         }
         this.fire('cell-empty-changed');
