Flex -> flex-grow

--- a/vaadin-grid-column.html
+++ b/vaadin-grid-column.html
@@ -91,8 +91,12 @@
       this.fire('property-changed', {path: 'footerTemplate', value: footerTemplate});
     },
 
-    _flexChanged: function(flex) {
-      this.fire('property-changed', {path: 'flex', value: flex});
+    _flexGrowChanged: function(flexGrow) {
+      this.fire('property-changed', {path: 'flexGrow', value: flexGrow});
+    },
+
+    _flexShrinkChanged: function(flexShrink) {
+      this.fire('property-changed', {path: 'flexShrink', value: flexShrink});
     },
 
     _widthChanged: function(width) {
@@ -114,7 +118,7 @@
         value: '100px'
       },
 
-      flex: {
+      flexGrow: {
         type: Number,
         value: 1
       },
@@ -131,7 +135,13 @@
       }
     },
 
-    observers: ['_flexChanged(flex)', '_widthChanged(width)', '_templateChanged(template)', '_frozenChanged(frozen)', '_hiddenChanged(hidden)'],
+    observers: [
+      '_flexGrowChanged(flexGrow)',
+      '_widthChanged(width)',
+      '_templateChanged(template)',
+      '_frozenChanged(frozen)',
+      '_hiddenChanged(hidden)'
+    ],
 
     _frozenChanged: function(frozen) {
       this.fire('property-changed', {path: 'frozen', value: frozen});
@@ -181,7 +191,17 @@
         }
       },
 
-      flex: {
+      flexGrow: {
+        type: Number,
+        readOnly: true
+      },
+
+      minWidth: {
+        type: String,
+        readOnly: true
+      },
+
+      flexShrink: {
         type: Number,
         readOnly: true
       },
@@ -206,14 +226,16 @@
       }
     },
 
-    observers: ['_updateVisibleChildColumns(_childColumns)',
-    '_childColumnsChanged(_childColumns)',
-    '_flexChanged(flex)',
-    '_widthChanged(width)',
-    '_frozenChanged(_childColumns, frozen)',
-    '_hiddenChanged(hidden)',
-    '_visibleChildColumnsChanged(_visibleChildColumns)',
-    '_colSpanChanged(colSpan)'],
+    observers: [
+      '_updateVisibleChildColumns(_childColumns)',
+      '_childColumnsChanged(_childColumns)',
+      '_flexGrowChanged(flexGrow)',
+      '_widthChanged(width)',
+      '_frozenChanged(_childColumns, frozen)',
+      '_hiddenChanged(hidden)',
+      '_visibleChildColumnsChanged(_visibleChildColumns)',
+      '_colSpanChanged(colSpan)'
+    ],
 
     listeners: {
       'property-changed': '_columnPropChanged'
@@ -233,7 +255,7 @@
         this._updateVisibleChildColumns(this._childColumns);
       }
 
-      if (/flex|width|hidden|_childColumns/.test(e.detail.path)) {
+      if (/flexGrow|width|hidden|_childColumns/.test(e.detail.path)) {
         this._updateFlexAndWidth(this._visibleChildColumns);
       }
 
@@ -261,9 +283,19 @@
         return prev += ' + ' + (curr.width || '0').replace('calc', '');
       }, '').substring(3) + ')');
 
-      this._setFlex(visibleChildColumns.reduce(function(prev, curr) {
-        return prev + curr.flex;
+      this._setFlexGrow(visibleChildColumns.reduce(function(prev, curr) {
+        return prev + curr.flexGrow;
       }, 0));
+      this._setFlexShrink(visibleChildColumns.reduce(function(prev, curr) {
+        return prev + curr.flexShrink;
+      }, 0));
+
+      this._setMinWidth('calc(' + visibleChildColumns.filter(function(column) {
+        return column.flexShrink === 0;
+      }).reduce(function(prev, curr) {
+        return prev += ' + ' + (curr.width || '0').replace('calc', '');
+      },'').substring(3) + ')');
+
     },
 
     _frozenChanged: function(childColumns, frozen) {
