--- a/test/keyboard-navigation.html
+++ b/test/keyboard-navigation.html
@@ -168,6 +168,14 @@
           expect(grid._navigating).to.be.false;
         });
 
+        it('should disable navigation mode when blurred', function() {
+          grid._navigating = true;
+
+          grid.fire('blur');
+
+          expect(grid._navigating).to.be.false;
+        });
+
         it('should enable navigation mode when tabbed into header', function() {
           // simulating tabbing into header
           headerTrap.focus();
