--- a/test/themability.html
+++ b/test/themability.html
@@ -134,9 +134,9 @@
       });
 
       it('should override focused cell styles', function() {
-        grid._virtualFocus = grid.$.scroller.$.items;
-        grid._virtualFocus._focusedRowIndex = 1;
-        grid._navigating = true;
+        grid.$.scroller._virtualFocus = grid.$.scroller.$.items;
+        grid.$.scroller._virtualFocus._focusedRowIndex = 1;
+        grid.$.scroller.navigating = true;
 
         setColor('--vaadin-grid-focused-cell', color1);
 
