--- a/vaadin-grid-table-row.html
+++ b/vaadin-grid-table-row.html
@@ -13,6 +13,10 @@
 
       extends: 'tr',
 
+      hostAttributes: {
+        'aria-role': 'row'
+      },
+
       properties: {
         active: {
           type: Boolean,
