--- a/vaadin-grid-table.html
+++ b/vaadin-grid-table.html
@@ -222,20 +222,20 @@
     <style include="vaadin-grid-row-details-themability-styles"></style>
 
     <!-- trap needs to have content in order for Safari to scroll the page when focused -->
-    <div id="headerFocusTrap" tabindex="0" on-focus="_onHeaderFocus" style="position: absolute;z-index: -1">&nbsp;</div>
-    <div id="bodyFocusTrap" tabindex="-1" on-focus="_onBodyFocus" style="position: absolute;z-index: -1">&nbsp;</div>
+    <div id="headerFocusTrap" tabindex="0" aria-hidden="true" on-focus="_onHeaderFocus" style="position: absolute;z-index: -1">&nbsp;</div>
+    <div id="bodyFocusTrap" tabindex="-1" aria-hidden="true" on-focus="_onBodyFocus" style="position: absolute;z-index: -1">&nbsp;</div>
 
     <content select="vaadin-grid-column, vaadin-grid-selection-column, vaadin-grid-column-group"></content>
 
     <div id="spinner"></div>
-    <table id="table" overflow-hidden$="[[_hideTableOverflow(scrollbarWidth, safari)]]">
+    <table id="table" role="grid" overflow-hidden$="[[_hideTableOverflow(scrollbarWidth, safari)]]">
       <caption>
         <div id="fixedsizer" is="vaadin-grid-sizer" top="[[_estScrollHeight]]" column-tree="[[columnTree]]">
         </div>
       </caption>
-      <thead id="header" target="[[target]]" is="vaadin-grid-table-header" column-tree="[[columnTree]]"></thead>
-      <tbody id="items" is="vaadin-grid-table-body"></tbody>
-      <tfoot id="footer" target="[[target]]" is="vaadin-grid-table-footer" column-tree="[[columnTree]]"></tfoot>
+      <thead id="header" role="rowgroup" target="[[target]]" is="vaadin-grid-table-header" column-tree="[[columnTree]]"></thead>
+      <tbody id="items" role="rowgroup" is="vaadin-grid-table-body" aria-live="polite"></tbody>
+      <tfoot id="footer" role="rowgroup" target="[[target]]" is="vaadin-grid-table-footer" column-tree="[[columnTree]]"></tfoot>
     </table>
 
     <vaadin-grid-table-outer-scroller
@@ -252,7 +252,7 @@
       It needs to be injected/slotted back inside the shadow root in order to be focusable.
      -->
     <content select="#footerFocusTrap"></content>
-    <div id="footerFocusTrap" tabindex="0" on-focus="_onFooterFocus" style="position: absolute;z-index: -1">&nbsp;</div>
+    <div id="footerFocusTrap" tabindex="0" aria-hidden="true" on-focus="_onFooterFocus" style="position: absolute;z-index: -1">&nbsp;</div>
   </template>
 </dom-module>
 
