--- a/vaadin-grid-keyboard-navigation-behavior.html
+++ b/vaadin-grid-keyboard-navigation-behavior.html
@@ -29,7 +29,7 @@
   vaadin.elements.grid.KeyboardNavigationBehaviorImpl = {
     hostAttributes: {
       // keys can be listened only when vaadin-grid is focusable
-      'tabindex': -1
+      // 'tabindex': -1
     },
 
     keyBindings: {
@@ -443,6 +443,7 @@
       if (this.interacting) {
         this.interacting = false;
         this._onTab(e); // revert to navigation
+        this.domHost.focus();
       } else if (this.navigating) {
         this.domHost.focus();
       }
