--- a/demo/sorting-filtering.html
+++ b/demo/sorting-filtering.html
@@ -32,7 +32,7 @@
             </vaadin-grid-column>
             <vaadin-grid-column>
               <template class="header">
-                <vaadin-grid-sorter path="user.name.first">First Name</vaadin-grid-sorter>
+                <vaadin-grid-sorter path="user.name.first">First Name <input></vaadin-grid-sorter>
               </template>
               <template>[[item.user.name.first]]</template>
             </vaadin-grid-column>
