--- a/vaadin-grid-table-cell.html
+++ b/vaadin-grid-table-cell.html
@@ -246,7 +246,101 @@
         'track': '_onTrack',
         'mousedown': '_cancelMouseDownOnResize',
         'mousemove': '_enableDrag',
-        'mouseout': '_disableDrag'
+        'mouseout': '_disableDrag',
+        'touchstart': '_onTouchStart',
+        'touchmove': '_onTouchMove',
+        'touchend': '_onTouchEnd',
+        'contextmenu': '_onContextMenu'
+      },
+
+      _onContextMenu: function(e) {
+        if (this._reorderGhost) {
+          e.preventDefault();
+        }
+      },
+
+      _onTouchStart: function(e) {
+        this._startReorderTimeout = setTimeout(this._onTouchMove.bind(this, e), 300);
+      },
+
+      _onTouchMove: function(e) {
+        clearTimeout(this._startReorderTimeout);
+        if (e.target !== this._resizeHandle && this.target.columnReorderingAllowed) {
+          e.preventDefault();
+
+          if (!this._reorderGhost) {
+            this._reorderGhost = this._createGhost();
+            Polymer.dom(this.target).appendChild(this._reorderGhost);
+
+            var dragStart = new CustomEvent('dragstart', {bubbles: true});
+            this._cellContent.dispatchEvent(dragStart);
+          } else {
+            var dragOver = new CustomEvent('dragover', {bubbles: true});
+            dragOver.clientX = e.touches[0].clientX;
+            dragOver.clientY = e.touches[0].clientY;
+
+            var target = this._contentFromPoint(dragOver.clientX, dragOver.clientY);
+            if (target) {
+              target.dispatchEvent(dragOver);
+            }
+          }
+
+          this._updateGhostPosition(e.touches[0].clientX, e.touches[0].clientY);
+        }
+      },
+
+      _updateGhostPosition: function(eventClientX, eventClientY) {
+        // This is where we want to position the ghost
+        var targetLeft = eventClientX - this.offsetWidth / 2;
+        var targetTop = eventClientY - 50;
+
+        // Current position
+        var _left = parseInt(this._reorderGhost.style.left || 0);
+        var _top = parseInt(this._reorderGhost.style.top || 0);
+
+        // Reposition the ghost
+        var ghostRect = this._reorderGhost.getBoundingClientRect();
+        this._reorderGhost.style.left = _left - (ghostRect.left - targetLeft) + 'px';
+        this._reorderGhost.style.top = _top - (ghostRect.top - targetTop) + 'px';
+      },
+
+      _onTouchEnd: function(e) {
+        clearTimeout(this._startReorderTimeout);
+        if (this._reorderGhost) {
+          var event = new CustomEvent('dragend', {bubbles: true});
+          this.dispatchEvent(event);
+          Polymer.dom(this.target).removeChild(this._reorderGhost);
+          this._reorderGhost = null;
+        }
+      },
+
+      _contentFromPoint: function(x, y) {
+        if (Polymer.Settings.useShadow) {
+          var scroller = this.target.$.scroller;
+          scroller.toggleAttribute('no-content-pointer-events', true);
+          var cell = scroller.root.elementFromPoint(x, y);
+          scroller.toggleAttribute('no-content-pointer-events', false);
+          if (cell && cell.getContentChildren) {
+            return cell.getContentChildren('content')[0];
+          }
+        } else {
+          return document.elementFromPoint(x, y);
+        }
+      },
+
+      _createGhost: function() {
+        var ghost = document.createElement('div');
+        ghost.classList.add('vaadin-grid-reorder-ghost');
+        ghost.innerText = this._cellContent.innerText;
+        ghost.style.position = 'fixed';
+        ghost.style.opacity = 0.5;
+        ghost.style.pointerEvents = 'none';
+        var style = window.getComputedStyle(this._cellContent);
+        ['boxSizing', 'display', 'width', 'height', 'background', 'alignItems', 'padding', 'border', 'flex-direction', 'overflow']
+        .forEach(function(propertyName) {
+          ghost.style[propertyName] = style[propertyName];
+        }, this);
+        return ghost;
       },
 
       _enableDrag: function() {
