--- a/vaadin-grid-table.html
+++ b/vaadin-grid-table.html
@@ -275,7 +275,7 @@
     <!--<content select="vaadin-grid-column, vaadin-grid-selection-column, vaadin-grid-column-group"></content>-->
 
     <div id="spinner"></div>
-    <vaadin-grid-table-table id="table" overflow-hidden$="[[_hideTableOverflow(scrollbarWidth, safari)]]">
+    <vaadin-grid-table-table id="table" tabindex="-1" overflow-hidden$="[[_hideTableOverflow(scrollbarWidth, safari)]]">
       <vaadin-grid-sizer id="fixedsizer" top="[[_estScrollHeight]]" column-tree="[[columnTree]]"></vaadin-grid-sizer>
       <vaadin-grid-table-header id="header" target="[[target]]" column-tree="[[columnTree]]"></vaadin-grid-table-header>
       <vaadin-grid-table-body id="items"></vaadin-grid-table-body>
@@ -372,7 +372,7 @@
     listeners: {
       'property-changed': '_columnPropChanged',
       'animationend': '_onAnimationEnd',
-      'header.column-resizing': '_onColumnResize'
+      'column-resizing': '_onColumnResize'
     },
 
     _onColumnResize: function() {
@@ -420,24 +420,24 @@
     },
 
     _rowDetailsTemplateChanged: function(rowDetailsTemplate, physicalItems, count) {
-      if (rowDetailsTemplate === undefined || physicalItems === undefined || count === undefined) {
+      if (rowDetailsTemplate === undefined || !physicalItems || count === undefined) {
         return;
       }
 
-      physicalItems.forEach(function(row) {
+      Array.prototype.forEach.call(physicalItems, function(row) {
         row.rowDetailsTemplate = rowDetailsTemplate;
       });
     },
 
     _columnTreeChanged: function(columnTree, physicalItems, count) {
-      if (columnTree === undefined || physicalItems === undefined || count === undefined) {
+      if (columnTree === undefined || !physicalItems || count === undefined) {
         return;
       }
 
       this._frozenCellsChanged();
       this._hasTemplatesChanged(columnTree);
 
-      physicalItems.forEach(function(row) {
+      Array.prototype.forEach.call(physicalItems, function(row) {
         row.columns = columnTree[columnTree.length - 1];
       });
 
@@ -446,7 +446,7 @@
     },
 
     _updateLastColumn: function() {
-      Polymer.dom(this.$.table).querySelectorAll('.vaadin-grid-row').forEach(function(row) {
+      Array.prototype.forEach.call(Polymer.dom(this.$.table).querySelectorAll('.vaadin-grid-row'), function(row) {
         row.updateLastColumn();
       });
     },
