--- a/vaadin-grid-table-scroll-behavior.html
+++ b/vaadin-grid-table-scroll-behavior.html
@@ -101,12 +101,16 @@
       }
     },
 
-    listeners: {
-      'table.wheel': '_onWheel'
-    },
-
     ready: function() {
       this.scrollTarget = this.$.table;
+    },
+
+    attached: function() {
+      this.listen(this.scrollTarget, 'wheel', '_onWheel');
+    },
+
+    detached: function() {
+      this.unlisten(this.scrollTarget, 'wheel', '_onWheel');
     },
 
     /**
@@ -169,7 +173,7 @@
     _hasScrolledAncestor: function(el, deltaX, deltaY) {
       if (this._canScroll(el, deltaX, deltaY)) {
         return true;
-      } else if (!el.hasAttribute('data-cell-content-id') && el !== this && el.parentElement) {
+      } else if (el.classList.toString().indexOf('cell-content') === -1 && el !== this && el.parentElement) {
         return this._hasScrolledAncestor(el.parentElement, deltaX, deltaY);
       }
     },
@@ -384,7 +388,7 @@
         Polymer.dom(this.root).querySelectorAll('.vaadin-grid-cell').forEach(function(cell) {
           cell.style.transform = '';
         });
-        this._frozenCells = Polymer.dom(this.root).querySelectorAll('[frozen]');
+        this._frozenCells = Array.prototype.slice.call(Polymer.dom(this.root).querySelectorAll('[frozen]'));
         this._translateStationaryElements();
       });
       this._updateLastFrozen();
