Split styling demos to avoid leaks

--- a/demo/common.html
+++ b/demo/common.html
@@ -26,9 +26,12 @@
     {name: 'columns', title: 'Columns'},
     {name: 'sorting-filtering', title: 'Sorting and Filtering'},
     {name: 'row-details', title: 'Row Details'},
-    {name: 'styling'},
     {name: 'crud'},
-    {name: 'pagination'}
+    {name: 'pagination'},
+    {name: 'styling-material', title: 'Styling: Material Design'},
+    {name: 'styling-valo', title: 'Styling: Valo'},
+    {name: 'styling-transparent', title: 'Styling: Transparent Header'},
+    {name: 'styling-rounded', title: 'Styling: Rounded Rows'},
 
   ];
 </script>
