--- a/vaadin-grid.html
+++ b/vaadin-grid.html
@@ -151,7 +151,7 @@ column and aling numeric contents to the right:
 
     </vaadin-grid>
 
-See also the “Styling” page in the demos.
+See also the “Styling” demos.
 
 ### Keyboard Navigation
 
