Fix selection tests, multi selection column

--- a/demo/selection.html
+++ b/demo/selection.html
@@ -145,8 +145,8 @@
             <x-array-data-provider items="{{items}}"></x-array-data-provider>
           
             <vaadin-grid aria-label="Multi-Selection Example" items="[[items]]">
-              <!--<vaadin-grid-selection-column auto-select>
-              </vaadin-grid-selection-column>-->
+              <vaadin-grid-selection-column auto-select>
+              </vaadin-grid-selection-column>
           
               <vaadin-grid-column width="50px" flex-grow="0">
                 <template class="header">#</template>
