--- a/vaadin-grid-table-cell.html
+++ b/vaadin-grid-table-cell.html
@@ -479,7 +479,7 @@
       },
 
       _headerTemplateChanged: function(headerTemplate, isAttached) {
-        if (isAttached === undefined) {
+        if (headerTemplate === undefined || isAttached === undefined) {
           return;
         }
 
