--- a/vaadin-grid-table.html
+++ b/vaadin-grid-table.html
@@ -453,7 +453,7 @@
 
     _updateHeaderFooterMetrics: function() {
       if (this._physicalSizes) {
-        Polymer.dom.flush();
+        // Polymer.dom.flush();
       }
       this._updateHeaderFooterMetricsSync();
 
