--- a/iron-list-behavior.html
+++ b/iron-list-behavior.html
@@ -373,7 +373,7 @@
        */
       updateViewportBoundaries: function() {
         this._scrollerPaddingTop = this.scrollTarget === this ? 0 :
-            parseInt(window.getComputedStyle(this)['padding-top'], 10);
+            parseInt(window.getComputedStyle(this)['padding-top'] || 0, 10);
 
         this._viewportHeight = this._scrollTargetHeight;
       },
@@ -536,7 +536,7 @@
       _updateMetrics: function(itemSet) {
         // Make sure we distributed all the physical items
         // so we can measure them
-        Polymer.dom.flush();
+        // Polymer.dom.flush();
 
         var newPhysicalSize = 0;
         var oldPhysicalSize = 0;
@@ -647,7 +647,7 @@
        * @param {number} idx The index of the item
        */
       scrollToIndex: function(idx) {
-        Polymer.dom.flush();
+        // Polymer.dom.flush();
 
         idx = Math.min(Math.max(idx, 0), this._virtualCount - 1);
         // update the virtual start only when needed
